--- a/package.json
+++ b/package.json
@@ -10,12 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^8.2.0",
+    "dotenv": "^16.0.0",
     "express": "^4.17.2",
-    "mongoose": "^5.11.10",
-    "morgan": "^1.10.0"
-  },
-  "devDependencies": {
+    "mongoose": "^6.2.1",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.15"
   }
 }
